--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   "dependencies": {
     "@apollo/client": "^3.9.11",
     "@apollo/experimental-nextjs-app-support": "^0.10.0",
-    "@apollo/server": "^4.10.4",
-    "@as-integrations/next": "^3.0.0",
     "@codesandbox/sandpack-react": "2.12.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
@@ -23,8 +21,6 @@
     "@types/react-dom": "18.2.19",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
-    "apollo-server-core": "^3.13.0",
-    "autoprefixer": "^10.4.17",
     "dotenv": "^16.4.2",
     "geist": "1.2.2",
     "graphql": "^16.8.1",
@@ -32,17 +28,20 @@
     "next": "14.2.0",
     "next-auth": "5.0.0-beta.3",
     "next-mdx-remote": "^4.4.1",
-    "postcss": "^8.4.35",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-tweet": "3.2.0",
     "sharp": "^0.33.3",
     "sugar-high": "^0.6.0",
-    "tailwindcss": "^3.4.1",
     "typescript": "5.3.3"
   },
   "prettier": {
     "singleQuote": true
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.35",
+    "autoprefixer": "^10.4.17"
   }
 }
