--- a/package.json
+++ b/package.json
@@ -21,27 +21,32 @@
     "@types/react-dom": "18.2.19",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
+    "axios": "^1.7.4",
     "dotenv": "^16.4.2",
     "geist": "1.2.2",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
+    "mongoose": "^8.6.2",
     "next": "14.2.0",
     "next-auth": "5.0.0-beta.3",
     "next-mdx-remote": "^4.4.1",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-masonry-css": "^1.0.16",
+    "react-photo-album": "^3.0.1",
     "react-tweet": "3.2.0",
     "sharp": "^0.33.3",
     "sugar-high": "^0.6.0",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "yet-another-react-lightbox": "^3.21.5"
   },
   "prettier": {
     "singleQuote": true
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17"
+    "tailwindcss": "^3.4.1"
   }
 }
