--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbo -p 3005",
     "build": "next build",
     "build-only": "next build",
     "start": "next start"
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@googleapis/youtube": "^13.1.0",
+    "@headlessui/react": "^2.2.2",
     "@nextui-org/react": "^2.3.5",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.11.17",
@@ -21,9 +22,12 @@
     "@types/react-dom": "18.2.19",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.4",
     "dotenv": "^16.4.2",
+    "framer-motion": "^12.11.0",
     "geist": "1.2.2",
+    "googleapis": "^148.0.0",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "mongoose": "^8.6.2",
